gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: pick
spec: 
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
